<resources>
    <!--General-->
    <string name="app_name">Unihelp</string>
    <!--Pantalla Bienvenida-->
    <string name="welcome_text">Bienvenido!</string>
    <string name="start_text">EMPEZAR</string>
    <!--Pantalla Intro Datos-->
    <string name="cuentanos_text">CUÉNTANOS SOBRE TI</string>
    <string name="como_llamas_text">¿Como te llamas?</string>
    <string name="que_estudias_text">¿Qué estudias?</string>
    <string name="que_curso_text">¿En qué curso estás?</string>
    <string name="que_idioma_text">¿Qué idioma usas?</string>
    <string name="que_cuatri">¿Qué cuatri cursas?</string>
    <string name="next_text">Siguiente</string>
    <!--Pantalla Inicio-->
    <string name="modo_estudio_text">Modo estudio</string>
    <string name="notas_text">Notas</string>
    <string name="calendario_text">Calendario</string>
    <string name="links_text">Links</string>
    <string name="alias_text">Alias</string>
    <string name="level_text">Nivel:</string>
    <string name="exp_text">Exp:</string>
    <string name="settings_text">SETTINGS</string>
    <!--Pantalla Ajustes-->
    <string name="cambiar_nombre_text">Nombre</string>
    <string name="cambiar_idioma_text">Seleccione un idioma</string>
    <string name="aplicar_cambios_text">APLICAR CAMBIOS</string>
    <!--PreferenceScreen-->
    <string name="app_settings">Ajustes de la aplicación</string>
    <string name="user_settings">Ajustes del usuario</string>
    <string name="pref_title_name">Nombre</string>
    <string name="pref_title_degree">Carrera</string>
    <string name="pref_title_year">Curso</string>
    <string name="pref_title_semester">Cuatrimestre</string>
    <string name="pref_title_language">Idioma</string>
    <string name="pref_allow_location">Permitir acceso a la ubicación</string>

    <string name="pref_spanish_text">Español</string>
    <string name="pref_english_text">Inglés</string>
    <string name="pref_spanish_value">Español</string>
    <string name="pref_english_value">Inglés</string>

    <string name="pref_primero_text">1º</string>
    <string name="pref_segundo_text">2º</string>
    <string name="pref_tercero_text">3º</string>
    <string name="pref_cuarto_text">4º</string>
    <string name="pref_primero_value">Primero</string>
    <string name="pref_segundo_value">Segundo</string>
    <string name="pref_tercero_value">Tercero</string>
    <string name="pref_cuarto_value">Cuarto</string>

    <string name="pref_sound_image_text">Ing. de Sonido e Imagen</string>
    <string name="pref_teleco_text">Ing. de Telecomunicaciones</string>
    <string name="pref_telematics_value">Ing. Telemática</string>
    <string name="pref_space_text">Ing. de Comunicaciones Móviles y Espaciales</string>
    <string name="pref_sound_image_value">Sonido e Imagen</string>
    <string name="pref_teleco_value">Teleco</string>
    <string name="pref_telematics_text">Telemática</string>
    <string name="pref_space_value">Espaciales</string>

    <string name="pref_first_semester_text">1er</string>
    <string name="pref_second_semester_text">2do</string>
    <string name="pref_first_semester_value">Primero</string>
    <string name="pref_second_semester_value">Segundo</string>

    <string name="pref_dark_mode">Modo oscuro</string>
    <!--Pantalla Calificaciones-->
    <string name="marks_text">MIS CALIFICACIONES</string>
    <string name="title_activity_create_note">CreateNote</string>
    <string name="note_creator_title_text">NUEVA CALIFICACIÓN</string>
    <string name="note_title_text">Título de la prueba:</string>
    <string name="note_subject_text">Asignatura:</string>
    <string name="note_number_text">Calificación:</string>
    <string name="note_percentage_text">% Sobre nota final:</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>