<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/unihelp_color"
    android:padding="20dp"
    tools:context=".NoteCreator">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textAlignment="center"
        android:text="@string/note_creator_title_text"
        android:textSize = "20dp"
        style="@style/MyTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <EditText
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_title_text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="25dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <EditText
            android:id="@+id/note_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_subject_text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="25dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <EditText
            android:id="@+id/note_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_number_text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="25dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <EditText
            android:id="@+id/note_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_percentage_text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="25dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_note_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="Añadir Califiación"
        android:textSize="20dp"
        android:onClick="goToMarks"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        style="@style/MyButtonStyle"/>

</LinearLayout>