<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/unihelp_color"
    android:orientation="vertical"
    tools:context=".intro_de_datos">

    <TextView
        android:id="@+id/cuentanos_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:fontFamily="@font/slackey_regular"
        android:text="@string/cuentanos_text"
        android:textColor="@color/white"
        android:textSize="28sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/comoTeLlamas_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="@font/slackey_regular"
        android:text="@string/como_llamas_text"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/campo_nombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@color/white"
        android:ems="10"
        android:fontFamily="@font/slackey_regular"

        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/queEstudias_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="@font/slackey_regular"
        android:text="@string/que_estudias_text"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <Spinner
        android:id="@+id/spinner_carreras"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="@font/slackey_regular"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/queCurso_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="@font/slackey_regular"
        android:text="@string/que_curso_text"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <Spinner
        android:id="@+id/spinner_curso"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="@font/slackey_regular"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/queIdioma_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="@font/slackey_regular"
        android:text="@string/que_cuatri"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <Spinner
        android:id="@+id/spinner_idioma"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="@font/slackey_regular"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_siguiente"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/unihelp_second_color"
        android:fontFamily="@font/slackey_regular"
        android:onClick="siguiente"
        android:text="@string/next_text"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>