<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/unihelp_color"
    tools:context=".inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <ImageView
            android:padding="10dp"
            android:id="@+id/fotoDePerfil"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:tag="1"
            app:srcCompat="@drawable/nofoto" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/settings_image"
                android:fontFamily="@font/slackey_regular"
                android:onClick="go_to_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/alias_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="100dp"
                android:layout_weight="0.4"
                android:fontFamily="@font/slackey_regular"
                android:gravity="center"
                android:text="@string/alias_text"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/alias"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/slackey_regular"
                android:gravity="center"
                android:text="@string/alias_text"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alias_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_estudio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/modo_estudio_text"
                android:textSize="20sp"
                android:onClick="go_to_modo_estudio"
                android:background="@drawable/rounded_corner"
                style="@style/MyButtonStyle"/>

            <Button
                android:id="@+id/boton_notas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/notas_text"
                android:onClick="go_to_marks"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                style="@style/MyButtonStyle"/>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_calendario"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/calendario_text"
                android:textSize="18sp"
                android:onClick="go_to_calendario"
                android:background="@drawable/rounded_corner"
                style="@style/MyButtonStyle"/>

            <Button
                android:id="@+id/boton_links"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/links_text"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                style="@style/MyButtonStyle"/>
    </LinearLayout>

</LinearLayout>